<resources>
    <string name="app_name">Morphosis</string>
    <string name="title_activity_scooby_dooby_doo_home">Scooby Dooby Doo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_techfest_home">Morphosis</string>

    <!-- Strings for navigation drawer items -->
    <string name="nav_home_title">Home</string>
    <string name="nav_profile_title">Profile</string>
    <string name="nav_leaderboard_title">Leaderboard</string>
    <string name="nav_developers_title">Developers</string>
    <string name="nav_logout_title">Logout</string>
    <string name="answer_field_hint">Enter your answer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_share_title">Share</string>
    <string name="nav_events_title">Events</string>
    <string name="nav_winners_title">Winners</string>
    <string name="nav_schedule_title">Schedule</string>
    <string name="nav_technical_society_title">Technical Society</string>
    <string name="nav_morphosis_website_title">Morphosis Website</string>
    <string name="nav_about_morphosis_title">About Morphosis</string>
    <string name="nav_notifications_title">Notifications</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nav_prizes_title">Prizes</string>

    <string name="title_activity_about_morphosis">AboutMorphosisActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nav_news_title">News</string>

    <string name="about">Morphosis is the annual technical festival organized by the Technical Society of NIT Mizoram. This festival is organized every year with a sincere motive to inculcate the technical and managerial skills in the very nature of the participants. We are here with a plethora of indulging and needless to say, super exulting events that not only provide an excellent system of support to the participants but also provide them a distinguished platform to carve out the niche in their field of interest. This year we are presenting a wide range of new and exciting events and that too at a very competitive level that is assured to send down a chill through your spines. So make your minds ready to experience the technical frenzy this year with Morphosis. Do join us and give us a chance to help you to excavate your hidden potential.</string>
    <string name="title_activity_scooby_doo_bnav_home">ScoobyDooBNavHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="robotics_banner_text">ROBOTICS</string>
    <string name="stock_bridge_banner_text">Stock Bridge</string>
    <string name="quiz_banner_text">Quiz</string>
    <string name="arcadia_banner_text">Arcadia</string>
    <string name="cube_fever_banner_text">Cube Fever</string>
    <string name="scooby_dooby_doo_banner_text">Scooby Dooby Doo</string>
    <string name="power_of_speech_banner_text">Power of Speech</string>
    <string name="code_warrior_banner_text">Code Warrior</string>
    <string name="cypher_banner_text">Cypher</string>
    <string name="tech_talk_banner_text">Tech Talk</string>
    <string name="science_expo_banner_text">Science Expo</string>
    <string name="abhyudaya_banner_text">Abhyudaya</string>
    <string name="manthan_banner_text">Manthan</string>
    <string name="maze_solver_button_text">Maze Solver</string>
    <string name="robo_race_button_text">Robo Race</string>
    <string name="robo_war_button_text">Robo War</string>
    <string name="morphosis_title">Morphosis</string>
    <string name="morphosis_sub_title">The annual Technical Festival of NIT Mizoram</string>
    <string name="shantanu_acharya">Shantanu Acharya</string>
    <string name="narayana_reddy">Narayana Reddy</string>
    <string name="the_web_team">The Web Team</string>
    <string name="developers">Developers</string>
</resources>
