<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home_title"
            android:icon="@drawable/ic_home_black_48dp" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/nav_events_title"
            android:icon="@drawable/ic_event_black_48dp" />
        <item
            android:id="@+id/nav_winners"
            android:title="@string/nav_winners_title"
            android:icon="@drawable/ic_leaderboard_black_100px" />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/nav_schedule_title"
            android:icon="@drawable/ic_schedule_black_48dp" />
        <item
            android:id="@+id/nav_technical_society"
            android:title="@string/nav_technical_society_title"
            android:icon="@drawable/ic_group_black_48dp" />
        <item
            android:id="@+id/nav_developer"
            android:title="@string/nav_developers_title"
            android:visible="true"
            android:icon="@drawable/ic_developer_mode_black_48dp"/>
        <item
            android:id="@+id/nav_morphosis_website"
            android:title="@string/nav_morphosis_website_title"
            android:icon="@drawable/ic_public_black_48dp" />
        <item
            android:id="@+id/nav_about_morphosis"
            android:title="@string/nav_about_morphosis_title"
            android:icon="@drawable/ic_info_black_48dp" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout_title"
            android:visible="true"
            android:icon="@drawable/ic_logout_black_48dp" />
        <item
            android:id="@+id/nav_share"
            android:title="@string/nav_share_title"
            android:icon="@drawable/ic_menu_share" />
    </group>

</menu>
