<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nitmz.morphosis.techfest.WinnersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_robotics_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/robotics" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/robotics_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:padding="15dp"
                android:text="@string/robotics_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/button_maze_solver_winner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/transparent"
                    android:text="@string/maze_solver_button_text" />

                <Button
                    android:id="@+id/button_robo_race_winner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/transparent"
                    android:text="@string/robo_race_button_text" />

                <Button
                    android:id="@+id/button_robo_war_winner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/transparent"
                    android:text="@string/robo_war_button_text" />

            </RelativeLayout>

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_stock_bridge_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/stock_bridge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/stock_bridge_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stock_bridge_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_quiz_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/quiz" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/quiz_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/quiz_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_arcadia_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/arcadia" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/arcadia_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/arcadia_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_cube_fever_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/cube_fever" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/cube_fever_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cube_fever_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_scooby_dooby_doo_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/scooby_dooby_doo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/scooby_dooby_doo_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scooby_dooby_doo_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_power_of_speech_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/power_of_speech" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/power_of_speech_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/power_of_speech_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_code_warrior_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/code_warrior" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/code_warrior_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/code_warrior_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_cypher_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/cypher" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/cypher_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cypher_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_tech_talk_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/tech_talk" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/tech_talk_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tech_talk_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_science_expo_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/science_expo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/science_expo_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/science_expo_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_abhyudaya_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/abhyudaya" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/abhyudaya_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/abhyudaya_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/banner_manthan_winner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/manthan" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/manthan_banner_title_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/manthan_banner_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>
